# onlain_dekanat

./: .gitignore  README.md  timp_tasks.txt
docker/: .env  docker-compose.yaml  readme.md
docker/dockerfiles/: dbcreate.dockerfile  fastapi.dockerfile
source/fastapi_gino_uvicorn/: commands  pyproject.toml  requirements.txt
source/fastapi_gino_uvicorn/migrations/: env.py
source/fastapi_gino_uvicorn/scripts/: prestart.sh
source/fastapi_gino_uvicorn/src/: database.py  logging_config.json  main.py
source/fastapi_gino_uvicorn/src/api/api_v1/: api.py
source/fastapi_gino_uvicorn/src/api/api_v1/endpoints/: dialogs.py  pages.py  students_submissions.py  users.py  ws.py  zachetka.py
source/fastapi_gino_uvicorn/src/core/: config.py
source/fastapi_gino_uvicorn/src/models/: models.py
source/fastapi_gino_uvicorn/src/schemas/: models.py
source/fastapi_gino_uvicorn/src/static/: map.css
source/fastapi_gino_uvicorn/src/static/css/: create_dopusk.css  login.css  main.css  useradd.css
source/fastapi_gino_uvicorn/src/templates/: create_dopusk.html  create_dopusk_accept.html  create_spravka.html  create_spravka_accept.html  edit_dopusk.html  edit_spravka.html  login.html  login_false.html  main.html  main_admin.html  status_dopusk.html  status_dopusk_admin.html  status_spravka.html  status_spravka_admin.html  useradd.html
source/fastapi_gino_uvicorn/src/templates/dopusk_page/: index.html
source/fastapi_gino_uvicorn/src/templates/dopusk_page/css/: style.css  style.min.css
source/fastapi_gino_uvicorn/src/templates/dopusk_page/js/: app.js  app.min.js
(+5 files in other folders)
