[tool.poetry]
name = "fastapi-gino-uvicorn"
version = "0.1.0"
description = "Gino, fastapi template"
authors = ["Gcunhaa <gsalomaoc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
alembic = "^1.4.3"
gino = {extras = ["starlette"], version = "^1.0.1"}
psycopg2 = "^2.8.6"
python-multipart = "^0.0.5"
httpx = "^0.21.1"
aiofiles = "^0.7.0"
jinja2 = "3.0.3"
loguru = "^0.5.3"
fastapi-redis-cache = "^0.2.5"
aioredis = "^2.0.0"
requests = "^2.26.0"
[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
requests = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
